feat: add API to fetch apartment by id
