# api/apartments.go
@@ -7,6 +7,7 @@ import (
 	"rello-test-task/db/models"
 
 	"github.com/gofiber/fiber/v2"
+	"github.com/volatiletech/sqlboiler/v4/queries/qm"
 )
 
 type ApartmentResponse struct {
@@ -38,6 +39,36 @@ func (s *Server) GetAllApartments(ctx *fiber.Ctx) error {
 
 	apartmentsResponse := mapToApartmentsResponse(apartments)
 	ctx.Status(http.StatusOK).JSON(apartmentsResponse)
+
+	return nil
+}
+
+// @Summary Get apartment by id
+// @Tags Apartment
+// @Description Get a specific apartment by the specified id
+// @ID get-apartment-by-id
+// @Accept json
+// @Produce json
+// @Param id path string true "the specific apartment id"
+// @Success 200 {object} ApartmentResponse
+// @Failure 400 {object} ErrResponse
+// @Failure 500 {object} ErrResponse
+// @Router /apartments/{id} [get]
+func (s *Server) GetApartmentById(ctx *fiber.Ctx) error {
+	id := ctx.Params("id")
+
+	apartment, err := models.Apartments(qm.Where("id=?", id)).One(ctx.Context(), s.store.GetDB())
+	if err != nil {
+		if errors.Is(err, sql.ErrNoRows) {
+			ctx.Status(http.StatusNotFound).JSON(errorResponse(err))
+			return nil
+		}
+		ctx.Status(http.StatusInternalServerError).JSON(errorResponse(err))
+		return err
+	}
+
+	apartmentResponse := mapToApartmentResponse(apartment)
+	ctx.Status(http.StatusOK).JSON(apartmentResponse)
 
 	return nil
 }
